--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ CMakeCache.txt
 cmake_install.cmake
 Makefile
 
+**/_deps/
+
 # IDE/editor files
 .vscode/
 *.code-workspace
@@ -21,3 +23,5 @@ Makefile
 *.dll
 *.exe
 *.out
+
+*.sh
